--- a/About_us.html
+++ b/About_us.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="shortcut icon" href="C:\Users\Kunal Sharma\Desktop\Chocofiesta\Transparent\favicon.png">
+        <link rel="shortcut icon" href="Images/Favicon.png">
         <link href="https://fonts.googleapis.com/css2?family=Rochester&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Chocofiesta</title>
@@ -48,7 +48,7 @@
             .coverimg{
                 padding-top: 140px;
                 padding-bottom: 165px;
-                background: -webkit-linear-gradient(rgba(4, 5, 14, 0.6), rgba(20, 10, 10, 0.6)), url("C:/Users/Kunal Sharma/Desktop/Chocofiesta/img/CoverImg6.jpg");
+                background: -webkit-linear-gradient(rgba(4, 5, 14, 0.6), rgba(20, 10, 10, 0.6)), url("Images/CoverImg6.jpg");
                 background-size: cover;
                 background-position: center center;
                 background-color: black;
@@ -137,7 +137,7 @@
                 margin: 60px 10px 10px 10px;
             }
             .historycover{
-                background-image: url("C:/Users/Kunal Sharma/Desktop/Chocofiesta/img/About_us_History_cover.png");
+                background-image: url("Images/About_us_History_cover.png");
                 background-color: wheat;
                 padding-bottom: 80px;
             }
@@ -196,7 +196,7 @@
             .reviews{
                 padding-top: 110px;
                 padding-bottom: 110px;
-                background: url("C:/Users/Kunal Sharma/Desktop/Chocofiesta/img/CoverImg7.jpg");
+                background: url("Images/CoverImg7.jpg");
                 background-size: cover;
                 background-position: center center;
             }
@@ -214,8 +214,8 @@
         <section>
             <nav>
                 <ul>
-                    <img class="logo" src="C:\Users\Kunal Sharma\Desktop\Chocofiesta\Transparent\transparent  (4).png" height="17%" width="17%" alt="logo">
-                    <li class="nav_1"><a href="C:\Users\Kunal Sharma\Desktop\Chocofiesta\Chocofiesta.html">Home</a></li>
+                    <img class="logo" src="Images/Transparent logo.png" height="17%" width="17%" alt="logo">
+                    <li class="nav_1"><a href="index.html">Home</a></li>
                     <li class="nav"><a href="#">About Us</a></li>
                     <li class="nav"><a href="#">Gift</a></li>
                     <li class="nav"><a href="#">Shop</a></li>
@@ -251,7 +251,7 @@
                     </td>
 
                     <td width="55%">
-                        <img src="C:\Users\Kunal Sharma\Desktop\Chocofiesta\img\About_us_Story.png" class="img1" align="right" width="95%" height="80%">
+                        <img src="Images/About_us_Story.png" class="img1" align="right" width="95%" height="80%">
                     </td>
 
                 </tr>
@@ -304,13 +304,12 @@
             </table>
         </section>
 
-
         <section>
             <table>
                 <tr width="33.33%">
-                    <td><img src="C:\Users\Kunal Sharma\Desktop\Chocofiesta\img\About_us_Who.jpg" class="img2" align="center" width="95%" height="50%"></td>
-                    <td><img src="C:\Users\Kunal Sharma\Desktop\Chocofiesta\img\About_us_What.jpg" class="img2" align="center" width="95%" height="50%"></td>
-                    <td><img src="C:\Users\Kunal Sharma\Desktop\Chocofiesta\img\About_us_Why.jpg" class="img2" align="center" width="95%" height="50%"></td>
+                    <td><img src="Images/About_us_Who.jpg" class="img2" align="center" width="95%" height="270px"></td>
+                    <td><img src="Images/About_us_What.jpg" class="img2" align="center" width="95%" height="270px"></td>
+                    <td><img src="Images/About_us_Why.jpg" class="img2" align="center" width="95%" height="270px"></td>
                 </tr>
 
                 <tr width="33.33%">
@@ -320,9 +319,9 @@
                 </tr>
 
                 <tr width="33.33%">
-                    <td><p class="Ques_text" style="text-align: center">Use a past defeat as a motivator. Remind yourself you have nowhere to go except up as you have already been at the bottom.</p></td>
-                    <td><p class="Ques_text" style="text-align: center">Use a past defeat as a motivator. Remind yourself you have nowhere to go except up as you have already been at the bottom.</p></td>
-                    <td><p class="Ques_text" style="text-align: center">Use a past defeat as a motivator. Remind yourself you have nowhere to go except up as you have already been at the bottom.</p></td>
+                    <td><p class="Ques_text" style="text-align: center">ChocoFiesta is one of best online Chocolate stores in India and making Online Chocolate Shopping easy for every shopper.</p></td>
+                    <td><p class="Ques_text" style="text-align: center">We have been making best chocolates with so much passion. We can customize chocolates as per your choice and occassion.</p></td>
+                    <td><p class="Ques_text" style="text-align: center">We offer you budget friendly chocolate gifts for your loved ones. Proper hygiene is our utmost priority.</p></td>
                 </tr>
             </table>
             <hr>
