Update About and Gift Page

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                     <img class="logo" src="Images\Transparent logo.png" height="17%" width="17%" alt="logo">
                     <li class="nav_1"><a href="#">Home</a></li>
                     <li class="nav"><a href="About_us.html">About Us</a></li>
-                    <li class="nav"><a href="#">Gift</a></li>
+                    <li class="nav"><a href="Gift.html">Gift</a></li>
                     <li class="nav"><a href="#">Shop</a></li>
                     <li class="nav"><a href="#">Blog</a></li>
                     <li class="nav"><a href="#">Contact Us</a></li>
@@ -551,7 +551,7 @@
                 <a href="https://www.facebook.com/profile.php?id=100009461494163" target="_blank"><i class="fa fa-facebook" width="18px" height="18px" style="color:white; padding-right: 8px;"></i></a>          
             </div>
             <br>
-            <p style="text-align: center; color: white;">&copy; Copyright 2020, ChocoFiesta. All Rights Reserved.&nbsp;&nbsp;|&nbsp;&nbsp;Designed by:- Kunal Sharma</p>
+            <p style="text-align: center; color: white;">&copy; Copyright 2021, ChocoFiesta. All Rights Reserved.&nbsp;&nbsp;|&nbsp;&nbsp;Designed by:- Kunal Sharma</p>
         </section>
     </body>
 </html>
