--- a/About_us.html
+++ b/About_us.html
@@ -153,7 +153,7 @@
             .historytext{
                 text-align: center;
                 font-size: 17px;
-                color: #858484;
+                color: #808080;
                 padding-bottom: 20px;
             }
             .historynumber{
@@ -161,7 +161,8 @@
                 font-family: Rochester;
                 text-align: center;
                 border-radius: 100px;
-                background-color: #808080;
+                background-color: #dddddd;
+                /* background-color: #858484; */
                 color: black;
             }
             .history_title{
@@ -194,11 +195,43 @@
                 color: #808080;
             }
             .reviews{
-                padding-top: 110px;
-                padding-bottom: 110px;
+                /* padding-top: 110px;
+                padding-bottom: 110px; */
                 background: url("Images/CoverImg7.jpg");
                 background-size: cover;
                 background-position: center center;
+            }
+            .reviewcover1{
+                z-index: 17; 
+                font-family: Rochester; 
+                visibility: visible; 
+                text-align: center; 
+                line-height: 40px; 
+                font-weight: 600; 
+                font-size: 40px; 
+                letter-spacing: 1px;
+                border-color: rgb(119, 119, 119); 
+                border-style: none; 
+                margin: 0px; 
+                border-radius: 0px;
+                padding-top: 20px;
+                height: auto; 
+                width: auto; 
+                color: white;
+            }
+            .reviewcover2{
+                text-align: center; 
+                font-size: 15px; 
+                border-style: none; 
+                margin: 2px; 
+                letter-spacing: 0.5px;
+                height: auto; 
+                width: auto; 
+                font-style: italic;
+                line-height: 1.3;
+                font-size: 16px;
+                padding: 30px 20px 60px 10px;
+                letter-spacing: 0.5px;
             }
             .footer{
                 background-color: #3a2b2b;
@@ -217,7 +250,7 @@
                     <img class="logo" src="Images/Transparent logo.png" height="17%" width="17%" alt="logo">
                     <li class="nav_1"><a href="index.html">Home</a></li>
                     <li class="nav"><a href="#">About Us</a></li>
-                    <li class="nav"><a href="#">Gift</a></li>
+                    <li class="nav"><a href="Gift.html">Gift</a></li>
                     <li class="nav"><a href="#">Shop</a></li>
                     <li class="nav"><a href="#">Blog</a></li>
                     <li class="nav"><a href="#">Contact Us</a></li>
@@ -232,7 +265,7 @@
 
         <section class="coverimg">
             <p class="covertext1"><br>About US</p><br>
-            <p class="covertext2">UVW<br>XYZ</p>
+            <p class="covertext2"><i class="fa fa-home" width="18px" height="18px" style="color:white;"></i> Home / About us</p>
         </section>
 
         <section>
@@ -328,8 +361,23 @@
         </section>
 
         <section class="reviews">
-            <p class="covertext1" style="color:#3a2b2b"><br>Choco Review</p><br>
-            <p class="covertext2" style="color: black">UVW<br>XYZ</p>
+        <div class="div6">
+            <p class="reviewcover1" style="color:#3a2b2b"><br>Choco Review</p><br>
+            <div style="margin: 20px auto; width: 80%">
+                <img src="Images/Gaurav Kumar.jpeg" style="width: 170px; height: 170px; margin-left: 30px; border-radius: 50%; float: right">
+                <p class="reviewcover2" style="color: black;">"Perfect chocolates at the best quality. The chocolates were so amazing, Could tell from the taste that they were made with the best ingredients. Once u visit here you realise that's the best decision that you ever made. <br> Get to buy the real chocolates. If you are lucky u even get to see how chocolate is made.
+                    <b><span style= color:#808080;>Must visit!"</span></b><br><br>
+                    <span style="margin-left: 550px; color: #3a2b2b;"><b>- Gaurav Kumar</b></span>
+                </p>  
+                <br><br>
+                <img src="Images/Maitreyi Paweria.jpeg" style="width: 170px; height: 170px; margin-left: 30px; border-radius: 50%; float: right">
+                <p class="reviewcover2" style="color: black;">"I love Chocofiesta's chocolates. I always order from here and it's delivery is also fast. Different varieties of chocolates with reasonable prices. Quality and Quantity is excellent. Packaging is superb. Service is nice. Best place for chocolates lover. You get every different types of chocolates with various flavors.
+                    <b><span style= color:#808080;>Worth buying."</span></b><br><br> 
+                    <span style="margin-left: 575px; color: #3a2b2b;"><b>- Maitreyi Paweria</b></span>
+                </p>  
+            </div>
+            <br>
+        </div>
         </section>
 
         <section class="footer"> 
@@ -343,7 +391,7 @@
                 <a href="https://www.facebook.com/profile.php?id=100009461494163" target="_blank"><i class="fa fa-facebook" width="18px" height="18px" style="color:white; padding-right: 8px;"></i></a>          
             </div>
             <br>
-            <p style="text-align: center; color: white;">&copy; Copyright 2020, ChocoFiesta. All Rights Reserved.&nbsp;&nbsp;|&nbsp;&nbsp;Designed by:- Kunal Sharma</p>
+            <p style="text-align: center; color: white;">&copy; Copyright 2021, ChocoFiesta. All Rights Reserved.&nbsp;&nbsp;|&nbsp;&nbsp;Designed by:- Kunal Sharma</p>
         </section>
 
     </body>
