Update Gift and Contact page

--- a/About_us.html
+++ b/About_us.html
@@ -17,7 +17,7 @@
                 margin: 0;
                 overflow:hidden;
                 text-align: center;
-                padding-left: 175px;
+                padding-left: 250px;
                 padding-top: 18px;
             }
             nav ul{
@@ -195,8 +195,6 @@
                 color: #808080;
             }
             .reviews{
-                /* padding-top: 110px;
-                padding-bottom: 110px; */
                 background: url("Images/CoverImg7.jpg");
                 background-size: cover;
                 background-position: center center;
@@ -251,9 +249,9 @@
                     <li class="nav_1"><a href="index.html">Home</a></li>
                     <li class="nav"><a href="#">About Us</a></li>
                     <li class="nav"><a href="Gift.html">Gift</a></li>
-                    <li class="nav"><a href="#">Shop</a></li>
-                    <li class="nav"><a href="#">Blog</a></li>
-                    <li class="nav"><a href="#">Contact Us</a></li>
+                    <!-- <li class="nav"><a href="#">Shop</a></li>
+                    <li class="nav"><a href="#">Blog</a></li> -->
+                    <li class="nav"><a href="Contact.html">Contact Us</a></li>
                     <p class=nav_logo><a href="#"><i class="fa fa-search" width="18px" height="18px" style="color:#3a2b2b;"></i></a></p>
                     <p class=nav_logo><a href="#"><i class="fa fa-heart" width="18px" height="18px" style="color:#3a2b2b;"></i></a></p>
                     <p class=nav_logo><a href="#"><i class="fa fa-shopping-bag" width="18px" height="18px" style="color:#3a2b2b;"></i></a></p>
