--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 margin: 0;
                 overflow:hidden;
                 text-align: center;
-                padding-left: 175px;
+                padding-left: 250px;
                 padding-top: 18px;
             }
             nav ul{
@@ -337,9 +337,9 @@
                     <li class="nav_1"><a href="#">Home</a></li>
                     <li class="nav"><a href="About_us.html">About Us</a></li>
                     <li class="nav"><a href="Gift.html">Gift</a></li>
-                    <li class="nav"><a href="#">Shop</a></li>
-                    <li class="nav"><a href="#">Blog</a></li>
-                    <li class="nav"><a href="#">Contact Us</a></li>
+                    <!-- <li class="nav"><a href="#">Shop</a></li>
+                    <li class="nav"><a href="#">Blog</a></li> -->
+                    <li class="nav"><a href="Contact.html">Contact Us</a></li>
                     <p class=nav_logo><a href="#"><i class="fa fa-search" width="18px" height="18px" style="color:#3a2b2b;"></i></a></p>
                     <p class=nav_logo><a href="#"><i class="fa fa-heart" width="18px" height="18px" style="color:#3a2b2b;"></i></a></p>
                     <p class=nav_logo><a href="#"><i class="fa fa-shopping-bag" width="18px" height="18px" style="color:#3a2b2b;"></i></a></p>
@@ -555,4 +555,3 @@
         </section>
     </body>
 </html>
-
