--- a/About_us.html
+++ b/About_us.html
@@ -368,10 +368,10 @@
                     <span style="margin-left: 550px; color: #3a2b2b;"><b>- Gaurav Kumar</b></span>
                 </p>  
                 <br><br>
-                <img src="Images/Maitreyi Paweria.jpeg" style="width: 170px; height: 170px; margin-left: 30px; border-radius: 50%; float: right">
+                <img src="Images/Rashee Sharma.jpeg" style="width: 170px; height: 170px; margin-left: 30px; border-radius: 50%; float: right">
                 <p class="reviewcover2" style="color: black;">"I love Chocofiesta's chocolates. I always order from here and it's delivery is also fast. Different varieties of chocolates with reasonable prices. Quality and Quantity is excellent. Packaging is superb. Service is nice. Best place for chocolates lover. You get every different types of chocolates with various flavors.
                     <b><span style= color:#808080;>Worth buying."</span></b><br><br> 
-                    <span style="margin-left: 575px; color: #3a2b2b;"><b>- Maitreyi Paweria</b></span>
+                    <span style="margin-left: 575px; color: #3a2b2b;"><b>- Rashee Sharma</b></span>
                 </p>  
             </div>
             <br>
